#316 - Tweaked the search result response from Elasticsearch.